Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../logo.png">
     <title>Bakevans by Lina Bevans | Repostería Artesanal a la Medida</title>
     <meta name="description"
         content="Pasteles personalizados, galletas artesanales y repostería saludable para todas tus celebraciones. Ingredientes de calidad, diseños únicos.">
@@ -462,5 +463,6 @@
     <script src="js/particles.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
