--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../logo.png">
+    <link rel="icon" type="image/png" href="images/logo.png">
     <title>Bakevans by Lina Bevans | Repostería Artesanal a la Medida</title>
     <meta name="description"
         content="Pasteles personalizados, galletas artesanales y repostería saludable para todas tus celebraciones. Ingredientes de calidad, diseños únicos.">
@@ -466,3 +466,4 @@
 
 
 </html>
+
