--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="services-list">
             Reparación de todo tipos electrodomesticos (Neveras, Aires/Acon., abanicos lavadoras, etc.) 
         </div>
-        <a href="contact.html" class="cta-button">+57 316 2707351 cra 70 n84-31 paraiso/Bquilla</a>
+        <a href="https://elganext.onrender.com/" class="cta-button">+57 316 2707351 cra 70 n84-31 paraiso/Bquilla</a>
     </div>
 </div>
 
@@ -615,6 +615,7 @@
 
 
 </html>
+
 
 
 
